# open-predict-lens

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/src/app/: config.py  db.py  main.py
backend/src/app/core/: init_db.py  llm.py  tasks.py
backend/src/app/core/tools/: cal.py  web_search.py
backend/src/app/models/: trade.py
backend/src/app/prompts/: __init__.py
backend/src/app/prompts/system/: __init__.py  default.txt
backend/src/app/services/: kalshi_client.py  polymarket_client.py
backend/src/tests/: test_client.py  test_tools.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/components/: AnalyzePanel.tsx  MarketCard.tsx  MarketList.tsx
frontend/src/components/AnalyzePanel/: AnalyzePanel.module.scss  AnalyzePanel.tsx
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/MarketCard/: MarketCard.module.scss  MarketCard.tsx
frontend/src/components/MarketList/: MarketList.module.scss  MarketList.tsx
frontend/src/lib/: api.ts
frontend/src/types/: market.ts
infra/: docker-compose.yml
infra/env/: backend.env.example
infra/scripts/: wait-for-it.sh
